--- a/css-friends-12/css/12-modal.css
+++ b/css-friends-12/css/12-modal.css
@@ -1,1 +1,21 @@
 /* PHASE 12: Modal */
+
+.modal-screen {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  background: rgba(0, 0, 0, .8);
+}
+
+.modal-form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background: white;
+  height: 500px;
+  width: 300px;
+  z-index: 3;
+}
